--- a/edit_transaction.html
+++ b/edit_transaction.html
@@ -1,31 +1,39 @@
-<!-- templates/edit_transaction.html -->
 {% extends 'base.html' %}
 
-{% block title %}Edit Transaction - Budget Tracker{% endblock %}
-
 {% block content %}
-<h2>Edit Transaction</h2>
-<form action="#" method="POST">
-    <div class="mb-3">
-        <label for="description" class="form-label">Description</label>
-        <input type="text" class="form-control" id="description" name="description" required>
+  <h2>Edit Transaction</h2>
+  <form method="POST" action="{{ url_for('main.edit_transaction', transaction_id=transaction.id) }}">
+    {{ form.hidden_tag() }}
+    <div>
+      {{ form.description.label }} 
+      {{ form.description(size=32) }}
+      {% for error in form.description.errors %}
+        <p class="error">{{ error }}</p>
+      {% endfor %}
     </div>
-    <div class="mb-3">
-        <label for="amount" class="form-label">Amount</label>
-        <input type="number" class="form-control" id="amount" name="amount" required>
+    <div>
+      {{ form.amount.label }} 
+      {{ form.amount() }}
+      {% for error in form.amount.errors %}
+        <p class="error">{{ error }}</p>
+      {% endfor %}
     </div>
-    <div class="mb-3">
-        <label for="category" class="form-label">Category</label>
-        <input type="text" class="form-control" id="category" name="category" required>
+    <div>
+      {{ form.date.label }} 
+      {{ form.date() }}
+      {% for error in form.date.errors %}
+        <p class="error">{{ error }}</p>
+      {% endfor %}
     </div>
-    <div class="mb-3">
-        <label for="type" class="form-label">Type</label>
-        <select class="form-select" id="type" name="type" required>
-            <option value="income">Income</option>
-            <option value="expense">Expense</option>
-        </select>
+    <div>
+      {{ form.category_id.label }} 
+      {{ form.category_id() }}
+      {% for error in form.category_id.errors %}
+        <p class="error">{{ error }}</p>
+      {% endfor %}
     </div>
-    <button type="submit" class="btn btn-primary">Update Transaction</button>
-</form>
+    <button type="submit">Update</button>
+  </form>
 {% endblock %}
+
 
