--- a/manage_categories.html
+++ b/manage_categories.html
@@ -1,21 +1,58 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}Manage Categories - Budget Tracker{% endblock %}
+{% block title %}Manage Categories{% endblock %}
 
 {% block content %}
+<div class="container">
     <h1>Manage Categories</h1>
-    <form action="/manage_categories" method="POST">
-        <div class="mb-3">
-            <label for="category" class="form-label">New Category</label>
-            <input type="text" class="form-control" id="category" name="category" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Add Category</button>
+
+    <!-- Flash Messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for category, message in messages %}
+                    <li class="flash flash-{{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+
+    <!-- Add Category Form -->
+    <form method="POST" action="{{ url_for('main.manage_categories') }}">
+        <label for="category_name">Add New Category</label>
+        <input type="text" id="category_name" name="name" placeholder="Enter category name" required>
+        <button type="submit">Add Category</button>
     </form>
-    <hr>
-    <h2>Current Categories</h2>
-    <ul>
-        <li>Rent</li>
-        <li>Groceries</li>
-        <li>Entertainment</li>
-    </ul>
+
+    <!-- Display Existing Categories -->
+    <h2>Your Categories</h2>
+    {% if categories %}
+        <table>
+            <thead>
+                <tr>
+                    <th>Category Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for category in categories %}
+                    <tr>
+                        <td>{{ category.name }}</td>
+                        <td>
+                            <!-- Delete Category -->
+                            <form method="POST" action="{{ url_for('main.delete_category', category_id=category.id) }}" style="display:inline;">
+                                <button type="submit" onclick="return confirm('Are you sure you want to delete this category?');">
+                                    Delete
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>No categories found. Add one above to get started!</p>
+    {% endif %}
+</div>
 {% endblock %}
+
